ingress/innet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "trashmanager.ddns.net"
    http:
      paths:
      - pathType: Prefix
        path: "/oauth2"
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/oauth2/start?rd=$escaped_request_uri"
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "trashmanager.ddns.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpd-service
            port:
              number: 8081
